--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 2.8)
 
-project(object_recognition_msgs)
+project(object_tracking_msgs)
 
 find_package(catkin REQUIRED COMPONENTS
     roscpp
