--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,3 +34,6 @@ catkin_package(
 	std_msgs
 	message_runtime
 )
+
+install(DIRECTORY ${CATKIN_DEVEL_PREFIX}/${CATKIN_GLOBAL_MAVEN_DESTINATION}/org/ros/rosjava_messages/ 
+DESTINATION ${CATKIN_GLOBAL_MAVEN_DESTINATION}/org/ros/rosjava_messages)
