--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,6 +14,7 @@ link_directories(${catkin_LIBRARY_DIRS})
 add_message_files(
   FILES
   ObjectLocation.msg
+  ObjectShape.msg
   Hypothesis.msg
   ObjectHypothesis.msg
   CategoryProbability.msg
