--- a/package.xml
+++ b/package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <package>
   <name>object_tracking_msgs</name>
-  <version>1.0.2</version>
+  <version>1.0.3</version>
   <description>messages for segmentation and classification service</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag --> 
@@ -30,6 +30,7 @@
   <build_depend>rospy</build_depend>
   <build_depend>std_msgs</build_depend>
   <build_depend>sensor_msgs</build_depend>
+  <build_depend>grasping_msgs</build_depend>
   <build_depend>message_generation</build_depend>
 
   <buildtool_depend>catkin</buildtool_depend>
@@ -38,6 +39,7 @@
   <run_depend>rospy</run_depend>
   <run_depend>std_msgs</run_depend>
   <run_depend>sensor_msgs</run_depend>
+  <run_depend>grasping_msgs</run_depend>
   <run_depend>message_runtime</run_depend>
 
 
