--- a/package.xml
+++ b/package.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0"?>
 <package>
   <name>object_tracking_msgs</name>
-  <version>1.0.7</version>
+  <version>1.0.8</version>
   <description>messages for segmentation and classification service</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag --> 
-  <maintainer email="lhindemith@techfak.uni-bielefeld.de">lhindemith</maintainer>
+  <maintainer email="saschroeder@techfak.uni-bielefeld.de">saschroeder</maintainer>
 
 
   <!-- One license tag required, multiple allowed, one license per tag -->
@@ -22,7 +22,7 @@
   <!-- Author tags are optional, mutiple are allowed, one per tag -->
   <!-- Authors do not have to be maintianers, but could be -->
   <author email="lhindemith@techfak.uni-bielefeld.de">lhindemith</author>
-
+  <author email="saschroeder@techfak.uni-bielefeld.de">saschroeder</author>
 
   <!-- The *_depend tags are used to specify dependencies -->
   <!-- Dependencies can be catkin packages or system dependencies -->
