--- a/package.xml
+++ b/package.xml
@@ -31,6 +31,7 @@
   <build_depend>std_msgs</build_depend>
   <build_depend>sensor_msgs</build_depend>
   <build_depend>grasping_msgs</build_depend>
+  <build_depend>vision_msgs</build_depend>
   <build_depend>message_generation</build_depend>
 
   <buildtool_depend>catkin</buildtool_depend>
@@ -40,6 +41,7 @@
   <run_depend>std_msgs</run_depend>
   <run_depend>sensor_msgs</run_depend>
   <run_depend>grasping_msgs</run_depend>
+  <run_depend>vision_msgs</run_depend>
   <run_depend>message_runtime</run_depend>
 
 
